@@ -1,6 +1,6 @@
 # 经验笔记索引
 
-最近更新:2026-07-04 | 共 27 条
+最近更新:2026-07-06 | 共 34 条
 
 ## 按主题
 
@@ -8,24 +8,24 @@
   - [GitHub推送指南](GitHub推送指南.md)
 - **spring** (1) — 启动报错
   - [启动报错](spring/启动报错.md)
-- **AI-Agent** (24) — 常见问题 + 项目实战 + 多模型协作
-  - [常见问题记录](AI-Agent/常见问题记录.md) (6 条)
-  - [项目实战-从零构建Agent](AI-Agent/项目实战-从零构建Agent.md) (16 条)
-  - [多模型协作-视频工作室](AI-Agent/多模型协作-视频工作室.md) (1 条)
+- **AI-Agent** (31) — [📂 总索引](AI-Agent/README.md)
+  - [Prompt工程实战](AI-Agent/Prompt工程实战.md) (5 条)
+  - [常见问题排错](AI-Agent/常见问题排错.md) (7 条)
+  - 项目实战/
+    - [AI小说家](AI-Agent/项目实战/AI小说家.md) (6 条)
+    - [从零构建Agent](AI-Agent/项目实战/从零构建Agent.md) (11 条)
+    - [视频工作室](AI-Agent/项目实战/视频工作室.md) (2 条)
+    - [Agent框架选型-2026](AI-Agent/项目实战/Agent框架选型-2026.md) (1 条)
 
 ## 最近 10 条
 
+- 2026-07-06 [Prompt 工程 — 五条实战经验](AI-Agent/Prompt工程实战.md)
+- 2026-07-06 [2026 Agent 框架全景](AI-Agent/项目实战/Agent框架选型-2026.md)
+- 2026-07-06 [AI 小说家 — SQLite 树形改平铺](AI-Agent/项目实战/AI小说家.md)
+- 2026-07-06 [AI 小说家 — PyQt5 从原型到 1800 行](AI-Agent/项目实战/AI小说家.md)
+- 2026-07-06 [AI 小说家 — LLM 上下文策略](AI-Agent/项目实战/AI小说家.md)
+- 2026-07-06 [AI 小说家 — Agent 架构选型](AI-Agent/项目实战/AI小说家.md)
 - 2026-07-04 [gh CLI 在 Git Bash 中的路径陷阱](GitHub推送指南.md)
 - 2026-07-04 [多项目批量上传到 GitHub](GitHub推送指南.md)
 - 2026-07-04 [按项目类型生成 .gitignore](GitHub推送指南.md)
-- 2026-07-03 [双项目联调测试 — Python + Java 双轨验证](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [Java Agent vs Python Agent 关键差异](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [修复: Maven依赖源问题](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [修复: Java 幂运算解析 bug](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [修复: JDK Nashorn 引擎移除](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [修复: Java 编译配置 --enable-preview](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [修复: Python loguru 依赖缺失](AI-Agent/项目实战-从零构建Agent.md)
-- 2026-07-03 [Agent 死循环 — 反复调用同一个工具](AI-Agent/常见问题记录.md)
-- 2026-07-03 [Agent 答非所问 — 没有用 RAG 导致幻觉](AI-Agent/常见问题记录.md)
-- 2026-07-03 [工具调错 — 搜索和计算工具混淆](AI-Agent/常见问题记录.md)
-- 2026-07-03 [向量检索不到关键信息 — chunk 策略问题](AI-Agent/常见问题记录.md)
+- 2026-07-03 [双项目联调测试](AI-Agent/项目实战/从零构建Agent.md)
